# bam

./: .gitignore  CLAUDE.md  README.md  passenger_wsgi.py  requirements.txt
backend/: pyproject.toml
backend/bam_backend/: __main__.py  app.py  og.py  store.py
frontend/: .htaccess  index.html
frontend/css/: style.css
frontend/js/: api.js  main.js  mobile.js  scenes.js  share.js  sprites.js
