[project]
name = "bam-backend"
version = "0.1.0"
description = "Brave America Man scoreboard backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
]

[tool.uv]
# 7-day supply-chain quarantine — refuses packages published in the last week.
exclude-newer = "2026-04-15T00:00:00Z"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bam_backend"]
